<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/colorButton"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:layout_weight="1"
            android:text="@string/notes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:background="@color/buttonBackground"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/buttonBackground"

                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet1"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:background="@color/gray"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray"
                    app:cardBackgroundColor="@color/gray">

                    <EditText
                        android:id="@+id/et1"
                        android:layout_width="400dp"
                        android:layout_height="match_parent"
                        android:hint="@string/predmet1"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords">

                    </EditText>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:background="@color/buttonBackground"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet2"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/buttonBackground"
                    app:cardBackgroundColor="@color/gray">

                    <EditText
                        android:id="@+id/et2"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet2"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/buttonBackground"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet3"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/gray">

                    <EditText
                        android:id="@+id/et3"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet3"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/buttonBackground"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet4"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/gray">

                    <EditText
                        android:id="@+id/et4"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet4"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackground"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet5"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/gray">


                    <EditText
                        android:id="@+id/et5"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet5"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackground"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet6"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/gray">


                    <EditText
                        android:id="@+id/et6"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet6"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackground"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/predmet7"
                        android:textColor="@color/black"
                        android:textSize="24sp"

                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/gray">

                    <EditText
                        android:id="@+id/et7"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet7"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="40dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/save">
            </Button>


            <Button
                android:id="@+id/btnClear"
                android:layout_marginTop="10dp"
                android:layout_width="90dp"
                android:layout_gravity="end"
                android:background="@color/Red"
                android:layout_marginEnd="40dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/clear">
            </Button>

            <Button
                android:id="@+id/btnLoad"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:text="@string/load">

            </Button>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>